# CG

./: .gitignore  GLWidget.py  MainWindow.py  generator.py  main.py  presets.py  requirements.txt
Lb1_2/: GlWidget.py  presets.py
Lb3/: main.py
Lb3/gui/: MainWindow.py  drawarea.py  panel.py
Lb3/report/: main.tex
Lb3/utils/: core.py  mediator.py
Lb4/: lb4.py
Lb4/core/: drawer.py
Lb4/gui/: control_panel.py  drawarea.py  main_window.py
Lb5/: .gitignore  main.py  texture.vs
Lb5/core/: drawer.py
Lb5/gui/: control_panel.py  drawarea.py  main_window.py
Lb5/shaders/: fragment.glsl  vertex.glsl
Lb5_cpp/: CMakeLists.txt  generator.cpp  glad.c  main.cpp  shader_s.h  texture.fs  texture.vs  verticies.h
Lb5_cpp/glad/: glad.h
Lb5_cpp/gui/: MainWindow.cpp  MainWindow.h  Widgets.cpp  Widgets.h
Lb6/gui/: MainWindow.py  panel.py
Lb6/shaders/: fragment.fs
Lb6/utils/: mediator.py
Lb_3/: main.py
Lb_3/gui/: MainWindow.py  drawarea.py  panel.py  spline.py
Lb_3/report/: report.tex  title.tex
Terekhov_lb1_2/report1/: main.tex  report.tex  title.tex
Terekhov_lb1_2/report2/: report.tex  title.tex
gui/: MainWindow.py  drawarea.py  panel.py
report2/: main.tex
shaders/: fragment.fs  vertex.vs
utils/: drawer.py  ellipsoid.py  matrix.py  mediator.py
